default configuratiob api, identiy, jwt, mongo, logging-ihs, security is guess

--- a/EspraAPI/appsettings.json
+++ b/EspraAPI/appsettings.json
@@ -6,4 +6,30 @@
     }
   },
   "AllowedHosts": "*"
+  //,{
+  //  /// IDENTITY
+  //  "IDENTITY:DEV": "",
+  //  "IDENTITY:LIVE": "",
+
+  //  /// MONGO
+  //  "MONGO:DEV_URL": "mongodb://localhost:27017",
+  //  "MONGO:LIVE_URL": "", // <- wil lcontain user and password
+  //  "MONGO:DATBASE": "espra",
+  //  "MONGO:JSON_COLLECTION": "",
+  //  "MONGO:FILE_COLLECTION": "",
+  //  "MONGO": "",
+
+  //  /// JWT
+  //  "JWT:ValidAudience": "", // <- research and change this
+  //  "JWT:ValidIssuer": "", // <- research and change this
+  //  "JWT:Secret": "",
+
+  //  /// DEFAULT USER
+  //  "DEFAULT:Email": "",
+  //  "DEFAULT:UserName": "",
+  //  "DEFAULT:Password": "",
+
+  //  /// Sentry
+  //  "SENTRY:DNS": ""
+  //}
 }
