--- a/EspraAPI/Dockerfile
+++ b/EspraAPI/Dockerfile
@@ -7,14 +7,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["EspraAPI/EspraAPI.csproj", "EspraAPI/"]
+COPY ["EspraAPI.csproj", "EspraAPI/"]
 RUN dotnet restore "EspraAPI/EspraAPI.csproj"
+WORKDIR /src/EspraAPI
 COPY . .
-WORKDIR "/src/EspraAPI"
-RUN dotnet build "EspraAPI.csproj" -c Release -o /app/build
+RUN dotnet build  -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "EspraAPI.csproj" -c Release -o /app/publish
+RUN dotnet publish -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
