--- a/EspraAPI/appsettings.json
+++ b/EspraAPI/appsettings.json
@@ -5,31 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-  //,{
-  //  /// IDENTITY
-  //  "IDENTITY:DEV": "",
-  //  "IDENTITY:LIVE": "",
+  "AllowedHosts": "*",
+    /// IDENTITY
+    "IDENTITY:LIVE": "Data Source=identity\\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Database=espradb;Password=P@ssw0rd!",
+    /// MONGO
+    "MONGO:LIVE_URL": "mongodb://root:P@ssword@storage:27017",
+    "MONGO:DATBASE": "espra",
+    "MONGO:JSON_COLLECTION": "jsonCollectionDb",
+    "MONGO:FILE_COLLECTION": "fileCollectionDb",
+    "MONGO": "",
 
-  //  /// MONGO
-  //  "MONGO:DEV_URL": "mongodb://localhost:27017",
-  //  "MONGO:LIVE_URL": "", // <- wil lcontain user and password
-  //  "MONGO:DATBASE": "espra",
-  //  "MONGO:JSON_COLLECTION": "",
-  //  "MONGO:FILE_COLLECTION": "",
-  //  "MONGO": "",
+    /// JWT
+    "JWT:ValidAudience": "identity", // <- research and change this
+    "JWT:ValidIssuer": "identity", // <- research and change this
+    "JWT:Secret": "B%%fXP*/HYh#wzm8(p~3.lw6{96z=?=fnD42nXKixWqPlv=d.If56dEl#6c^l?K",
 
-  //  /// JWT
-  //  "JWT:ValidAudience": "", // <- research and change this
-  //  "JWT:ValidIssuer": "", // <- research and change this
-  //  "JWT:Secret": "",
+    /// DEFAULT USER
+    "DEFAULT:Email": "elon@musk.tesla",
+    "DEFAULT:UserName": "tesla",
+    "DEFAULT:Password": "mUsk@el0n"
 
-  //  /// DEFAULT USER
-  //  "DEFAULT:Email": "",
-  //  "DEFAULT:UserName": "",
-  //  "DEFAULT:Password": "",
-
-  //  /// Sentry
-  //  "SENTRY:DNS": ""
-  //}
+    /// Sentry
+    // "SENTRY:DNS": ""
 }
