Default configuratio that can be edited later on i hope

--- a/EspraAPI/appsettings.json
+++ b/EspraAPI/appsettings.json
@@ -1,30 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-    /// IDENTITY
-    "IDENTITY:LIVE": "Data Source=identity\\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Database=espradb;Password=P@ssw0rd!",
-    /// MONGO
-    "MONGO:LIVE_URL": "mongodb://root:P@ssword@storage:27017",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "IDENTITY:LIVE": "Server=identity;Database=espradb;User Id=sa;Password=P@ssw0rd!",
+
+    "MONGO:LIVE_URL": "mongodb://root:P%40ssw0rd%21@storage:27017",
     "MONGO:DATBASE": "espra",
     "MONGO:JSON_COLLECTION": "jsonCollectionDb",
     "MONGO:FILE_COLLECTION": "fileCollectionDb",
     "MONGO": "",
 
-    /// JWT
-    "JWT:ValidAudience": "identity", // <- research and change this
-    "JWT:ValidIssuer": "identity", // <- research and change this
+
+    "JWT:ValidAudience": "identity",
+    "JWT:ValidIssuer": "identity",
     "JWT:Secret": "B%%fXP*/HYh#wzm8(p~3.lw6{96z=?=fnD42nXKixWqPlv=d.If56dEl#6c^l?K",
 
-    /// DEFAULT USER
-    "DEFAULT:Email": "elon@musk.tesla",
+
+    "DEFAULT:Email": "musk@elon.aleset",
     "DEFAULT:UserName": "tesla",
     "DEFAULT:Password": "mUsk@el0n"
-
-    /// Sentry
-    // "SENTRY:DNS": ""
 }
