--- a/EspraAPI/docker-compose.yml
+++ b/EspraAPI/docker-compose.yml
@@ -1,1 +1,35 @@
-﻿
+﻿version: '3.8'
+
+services:
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    container_name: backend_storage
+    ports:
+      - "80:80"
+    depends_on:
+      identity:
+        condition: service_healthy
+    command: ["./wait-for-it.sh", "identity:1433", "Hello"]
+  identity:
+    build: 
+      context: .
+      dockerfile: Dockerfile.identity
+    container_name: sql_server
+    ports:
+      - "1433"
+    healthcheck:
+      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-USA", "-PP@ssw0rd!", "-Q", "select 1"]
+      interval: 1s
+      retries: 20
+  storage:
+    image: mongo
+    restart: always
+    container_name: mongo_server
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=P@ssw0rd!
+      - VIRTUAL_HOST=0.0.0.0:27017
+    ports:
+      - "27017"
