--- a/EspraUnitTest/EspraUnitTest.csproj
+++ b/EspraUnitTest/EspraUnitTest.csproj
@@ -25,4 +25,22 @@
     <ProjectReference Include="..\EspraAPI\EspraAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Files\Image.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\Image.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\Pdf.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\TextFile.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\Word.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
